// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot — b-zero > 2x² − 8 = 0 1`] = `
"
###### 2x² − 8 = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] factor-gcd: On simplifie en divisant les deux membres par 2 (PGCD)
[3] recognize-no-linear-term: Le coefficient de x est nul : on isole directement le carré
[4] isolate-square: On isole le carré
[5] extract-square-root: On extrait la racine carrée
[6] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On divise les deux membres par 2 (PGCD)
[3] Le coefficient de x est nul : on isole le carré
[4] On isole le carré
[5] On extrait la racine carrée
[6] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ 2x^2 - 8 = 0
[2] On divise les deux membres par 2 (PGCD)
    │ \\begin{aligned}   2x^2 - 8 &= 0 \\\\   x^2 - 4 &= 0 \\end{aligned}
[3] Le coefficient de x est nul : on isole le carré
    │ x^2 - 4 = 0
[4] On isole le carré
    │ \\begin{aligned}   x^2 - 4 &= 0 \\\\   x^2 &= 4 \\end{aligned}
[5] On extrait la racine carrée
    │ x = \\pm \\sqrt{4}
[6] Solutions
    │ S = \\left\\{ -2 \\,;\\, 2 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Simplification (÷ 2)
[2] b = 0 → isoler x²
[3] Isoler x²
[4] Racine carrée
[5] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Simplification (÷ 2)
    │ \\begin{aligned}   2x^2 - 8 &= 0 \\\\   x^2 - 4 &= 0 \\end{aligned}
[2] b = 0 → isoler x²
    │ x^2 - 4 = 0
[3] Isoler x²
    │ \\begin{aligned}   x^2 - 4 &= 0 \\\\   x^2 &= 4 \\end{aligned}
[4] Racine carrée
    │ x = \\pm \\sqrt{4}
[5] Ensemble des solutions
    │ S = \\left\\{ -2 \\,;\\, 2 \\right\\}
"
`;

exports[`snapshot — b-zero > x² + 4 = 0 1`] = `
"
###### x² + 4 = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] recognize-no-linear-term: Le coefficient de x est nul : on isole directement le carré
[3] isolate-square: On isole le carré
[4] no-real-solution: L’équation n’a pas de solution réelle

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] Le coefficient de x est nul : on isole le carré
[3] On isole le carré
[4] Pas de solution réelle

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ x^2 + 4 = 0
[2] Le coefficient de x est nul : on isole le carré
    │ x^2 + 4 = 0
[3] On isole le carré
    │ \\begin{aligned}   x^2 + 4 &= 0 \\\\   x^2 &= -4 \\end{aligned}
[4] Pas de solution réelle
    │ S = \\emptyset

========== SUPERIEUR (summarized) ==========
[1] b = 0 → isoler x²
[2] Isoler x²
[3] S = ∅

========== SUPERIEUR (detailed) ==========
[1] b = 0 → isoler x²
    │ x^2 + 4 = 0
[2] Isoler x²
    │ \\begin{aligned}   x^2 + 4 &= 0 \\\\   x^2 &= -4 \\end{aligned}
[3] S = ∅
    │ S = \\emptyset
"
`;

exports[`snapshot — b-zero > x² = 0 1`] = `
"
###### x² = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] recognize-no-linear-term: Le coefficient de x est nul : on isole directement le carré
[3] isolate-square: On isole le carré
[4] extract-square-root: On extrait la racine carrée
[5] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] Le coefficient de x est nul : on isole le carré
[3] On isole le carré
[4] On extrait la racine carrée
[5] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ x^2 = 0
[2] Le coefficient de x est nul : on isole le carré
    │ x^2 = 0
[3] On isole le carré
    │ x^2 = 0
[4] On extrait la racine carrée
    │ \\begin{aligned}   x^2 &= 0 \\\\   x &= 0 \\end{aligned}
[5] Solutions
    │ S = \\left\\{ 0 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] b = 0 → isoler x²
[2] Isoler x²
[3] Racine carrée
[4] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] b = 0 → isoler x²
    │ x^2 = 0
[2] Isoler x²
    │ x^2 = 0
[3] Racine carrée
    │ \\begin{aligned}   x^2 &= 0 \\\\   x &= 0 \\end{aligned}
[4] Ensemble des solutions
    │ S = \\left\\{ 0 \\right\\}
"
`;

exports[`snapshot — b-zero > x² − 9 = 0 1`] = `
"
###### x² − 9 = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] recognize-no-linear-term: Le coefficient de x est nul : on isole directement le carré
[3] isolate-square: On isole le carré
[4] extract-square-root: On extrait la racine carrée
[5] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] Le coefficient de x est nul : on isole le carré
[3] On isole le carré
[4] On extrait la racine carrée
[5] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ x^2 - 9 = 0
[2] Le coefficient de x est nul : on isole le carré
    │ x^2 - 9 = 0
[3] On isole le carré
    │ \\begin{aligned}   x^2 - 9 &= 0 \\\\   x^2 &= 9 \\end{aligned}
[4] On extrait la racine carrée
    │ x = \\pm \\sqrt{9}
[5] Solutions
    │ S = \\left\\{ -3 \\,;\\, 3 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] b = 0 → isoler x²
[2] Isoler x²
[3] Racine carrée
[4] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] b = 0 → isoler x²
    │ x^2 - 9 = 0
[2] Isoler x²
    │ \\begin{aligned}   x^2 - 9 &= 0 \\\\   x^2 &= 9 \\end{aligned}
[3] Racine carrée
    │ x = \\pm \\sqrt{9}
[4] Ensemble des solutions
    │ S = \\left\\{ -3 \\,;\\, 3 \\right\\}
"
`;

exports[`snapshot — c-zero > 2x² + 6x = 0 1`] = `
"
###### 2x² + 6x = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] factor-gcd: On simplifie en divisant les deux membres par 2 (PGCD)
[3] recognize-no-constant-term: Le terme constant est nul : on factorise par x
[4] factor-common-x: On factorise par x
[5] zero-product: Par la propriété du produit nul
[6] solve-each-factor: On résout chaque facteur séparément
[7] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On divise les deux membres par 2 (PGCD)
[3] Le terme constant est nul : on factorise par x
[4] On factorise par x
[5] Par la propriété du produit nul
[6] On résout chaque facteur séparément
[7] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ 2x^2 + 6x = 0
[2] On divise les deux membres par 2 (PGCD)
    │ \\begin{aligned}   2x^2 + 6x &= 0 \\\\   x^2 + 3x &= 0 \\end{aligned}
[3] Le terme constant est nul : on factorise par x
    │ x^2 + 3x = 0
[4] On factorise par x
    │ \\begin{aligned}   x^2 + 3x &= 0 \\\\   x \\left( x + 3\\right) &= 0 \\end{aligned}
[5] Par la propriété du produit nul
    │ \\left(x\\right) \\cdot \\left(x + 3\\right) = 0 \\;\\Longleftrightarrow\\; x = 0 \\;\\text{ou}\\; x + 3 = 0
[6] On résout chaque facteur séparément
    │ \\begin{aligned}   x = 0 &\\;\\Longleftrightarrow\\; x = 0 \\\\
  x + 3 = 0 &\\;\\Longleftrightarrow\\; x = -3 \\end{aligned}
[7] Solutions
    │ S = \\left\\{ 0 \\,;\\, -3 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Simplification (÷ 2)
[2] c = 0 → factoriser par x
[3] Factorisation par x
[4] Produit nul
[5] Résolution par facteur
[6] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Simplification (÷ 2)
    │ \\begin{aligned}   2x^2 + 6x &= 0 \\\\   x^2 + 3x &= 0 \\end{aligned}
[2] c = 0 → factoriser par x
    │ x^2 + 3x = 0
[3] Factorisation par x
    │ \\begin{aligned}   x^2 + 3x &= 0 \\\\   x \\left( x + 3\\right) &= 0 \\end{aligned}
[4] Produit nul
    │ \\left(x\\right) \\cdot \\left(x + 3\\right) = 0 \\;\\Longleftrightarrow\\; x = 0 \\;\\text{ou}\\; x + 3 = 0
[5] Résolution par facteur
    │ \\begin{aligned}   x = 0 &\\;\\Longleftrightarrow\\; x = 0 \\\\
  x + 3 = 0 &\\;\\Longleftrightarrow\\; x = -3 \\end{aligned}
[6] Ensemble des solutions
    │ S = \\left\\{ 0 \\,;\\, -3 \\right\\}
"
`;

exports[`snapshot — c-zero > 5x² − 10x = 0 1`] = `
"
###### 5x² − 10x = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] factor-gcd: On simplifie en divisant les deux membres par 5 (PGCD)
[3] recognize-no-constant-term: Le terme constant est nul : on factorise par x
[4] factor-common-x: On factorise par x
[5] zero-product: Par la propriété du produit nul
[6] solve-each-factor: On résout chaque facteur séparément
[7] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On divise les deux membres par 5 (PGCD)
[3] Le terme constant est nul : on factorise par x
[4] On factorise par x
[5] Par la propriété du produit nul
[6] On résout chaque facteur séparément
[7] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ 5x^2 - 10x = 0
[2] On divise les deux membres par 5 (PGCD)
    │ \\begin{aligned}   5x^2 - 10x &= 0 \\\\   x^2 - 2x &= 0 \\end{aligned}
[3] Le terme constant est nul : on factorise par x
    │ x^2 - 2x = 0
[4] On factorise par x
    │ \\begin{aligned}   x^2 - 2x &= 0 \\\\   x \\left( x - 2\\right) &= 0 \\end{aligned}
[5] Par la propriété du produit nul
    │ \\left(x\\right) \\cdot \\left(x - 2\\right) = 0 \\;\\Longleftrightarrow\\; x = 0 \\;\\text{ou}\\; x - 2 = 0
[6] On résout chaque facteur séparément
    │ \\begin{aligned}   x = 0 &\\;\\Longleftrightarrow\\; x = 0 \\\\
  x - 2 = 0 &\\;\\Longleftrightarrow\\; x = 2 \\end{aligned}
[7] Solutions
    │ S = \\left\\{ 0 \\,;\\, 2 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Simplification (÷ 5)
[2] c = 0 → factoriser par x
[3] Factorisation par x
[4] Produit nul
[5] Résolution par facteur
[6] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Simplification (÷ 5)
    │ \\begin{aligned}   5x^2 - 10x &= 0 \\\\   x^2 - 2x &= 0 \\end{aligned}
[2] c = 0 → factoriser par x
    │ x^2 - 2x = 0
[3] Factorisation par x
    │ \\begin{aligned}   x^2 - 2x &= 0 \\\\   x \\left( x - 2\\right) &= 0 \\end{aligned}
[4] Produit nul
    │ \\left(x\\right) \\cdot \\left(x - 2\\right) = 0 \\;\\Longleftrightarrow\\; x = 0 \\;\\text{ou}\\; x - 2 = 0
[5] Résolution par facteur
    │ \\begin{aligned}   x = 0 &\\;\\Longleftrightarrow\\; x = 0 \\\\
  x - 2 = 0 &\\;\\Longleftrightarrow\\; x = 2 \\end{aligned}
[6] Ensemble des solutions
    │ S = \\left\\{ 0 \\,;\\, 2 \\right\\}
"
`;

exports[`snapshot — c-zero > x² + 3x = 0 1`] = `
"
###### x² + 3x = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] recognize-no-constant-term: Le terme constant est nul : on factorise par x
[3] factor-common-x: On factorise par x
[4] zero-product: Par la propriété du produit nul
[5] solve-each-factor: On résout chaque facteur séparément
[6] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] Le terme constant est nul : on factorise par x
[3] On factorise par x
[4] Par la propriété du produit nul
[5] On résout chaque facteur séparément
[6] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ x^2 + 3x = 0
[2] Le terme constant est nul : on factorise par x
    │ x^2 + 3x = 0
[3] On factorise par x
    │ \\begin{aligned}   x^2 + 3x &= 0 \\\\   x \\left( x + 3\\right) &= 0 \\end{aligned}
[4] Par la propriété du produit nul
    │ \\left(x\\right) \\cdot \\left(x + 3\\right) = 0 \\;\\Longleftrightarrow\\; x = 0 \\;\\text{ou}\\; x + 3 = 0
[5] On résout chaque facteur séparément
    │ \\begin{aligned}   x = 0 &\\;\\Longleftrightarrow\\; x = 0 \\\\
  x + 3 = 0 &\\;\\Longleftrightarrow\\; x = -3 \\end{aligned}
[6] Solutions
    │ S = \\left\\{ 0 \\,;\\, -3 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] c = 0 → factoriser par x
[2] Factorisation par x
[3] Produit nul
[4] Résolution par facteur
[5] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] c = 0 → factoriser par x
    │ x^2 + 3x = 0
[2] Factorisation par x
    │ \\begin{aligned}   x^2 + 3x &= 0 \\\\   x \\left( x + 3\\right) &= 0 \\end{aligned}
[3] Produit nul
    │ \\left(x\\right) \\cdot \\left(x + 3\\right) = 0 \\;\\Longleftrightarrow\\; x = 0 \\;\\text{ou}\\; x + 3 = 0
[4] Résolution par facteur
    │ \\begin{aligned}   x = 0 &\\;\\Longleftrightarrow\\; x = 0 \\\\
  x + 3 = 0 &\\;\\Longleftrightarrow\\; x = -3 \\end{aligned}
[5] Ensemble des solutions
    │ S = \\left\\{ 0 \\,;\\, -3 \\right\\}
"
`;

exports[`snapshot — factorise > (2x + 1)(x − 4) = 0 1`] = `
"
###### (2x + 1)(x − 4) = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] recognize-factored: L’équation est déjà sous forme factorisée
[3] zero-product: Par la propriété du produit nul, chaque facteur est nul
[4] solve-each-factor: On résout chaque facteur séparément
[5] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] L’équation est déjà sous forme factorisée
[3] Par la propriété du produit nul
[4] On résout chaque facteur séparément
[5] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ \\left( 2x + 1\\right) \\left( x - 4\\right) = 0
[2] L’équation est déjà sous forme factorisée
    │ \\left( 2x + 1\\right) \\left( x - 4\\right) = 0
[3] Par la propriété du produit nul
    │ \\left(2x + 1\\right) \\cdot \\left(x - 4\\right) = 0 \\;\\Longleftrightarrow\\; 2x + 1 = 0 \\;\\text{ou}\\; x - 4 = 0
[4] On résout chaque facteur séparément
    │ \\begin{aligned}   2x + 1 = 0 &\\;\\Longleftrightarrow\\; x = -\\dfrac{1}{2} \\\\
  x - 4 = 0 &\\;\\Longleftrightarrow\\; x = 4 \\end{aligned}
[5] Solutions
    │ S = \\left\\{ -\\dfrac{1}{2} \\,;\\, 4 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Forme factorisée
[2] Produit nul
[3] Résolution par facteur
[4] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Forme factorisée
    │ \\left( 2x + 1\\right) \\left( x - 4\\right) = 0
[2] Produit nul
    │ \\left(2x + 1\\right) \\cdot \\left(x - 4\\right) = 0 \\;\\Longleftrightarrow\\; 2x + 1 = 0 \\;\\text{ou}\\; x - 4 = 0
[3] Résolution par facteur
    │ \\begin{aligned}   2x + 1 = 0 &\\;\\Longleftrightarrow\\; x = -\\dfrac{1}{2} \\\\
  x - 4 = 0 &\\;\\Longleftrightarrow\\; x = 4 \\end{aligned}
[4] Ensemble des solutions
    │ S = \\left\\{ -\\dfrac{1}{2} \\,;\\, 4 \\right\\}
"
`;

exports[`snapshot — factorise > (x + 1)(x − 5) = 0 1`] = `
"
###### (x + 1)(x − 5) = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] recognize-factored: L’équation est déjà sous forme factorisée
[3] zero-product: Par la propriété du produit nul, chaque facteur est nul
[4] solve-each-factor: On résout chaque facteur séparément
[5] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] L’équation est déjà sous forme factorisée
[3] Par la propriété du produit nul
[4] On résout chaque facteur séparément
[5] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ \\left( x + 1\\right) \\left( x - 5\\right) = 0
[2] L’équation est déjà sous forme factorisée
    │ \\left( x + 1\\right) \\left( x - 5\\right) = 0
[3] Par la propriété du produit nul
    │ \\left(x + 1\\right) \\cdot \\left(x - 5\\right) = 0 \\;\\Longleftrightarrow\\; x + 1 = 0 \\;\\text{ou}\\; x - 5 = 0
[4] On résout chaque facteur séparément
    │ \\begin{aligned}   x + 1 = 0 &\\;\\Longleftrightarrow\\; x = -1 \\\\
  x - 5 = 0 &\\;\\Longleftrightarrow\\; x = 5 \\end{aligned}
[5] Solutions
    │ S = \\left\\{ -1 \\,;\\, 5 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Forme factorisée
[2] Produit nul
[3] Résolution par facteur
[4] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Forme factorisée
    │ \\left( x + 1\\right) \\left( x - 5\\right) = 0
[2] Produit nul
    │ \\left(x + 1\\right) \\cdot \\left(x - 5\\right) = 0 \\;\\Longleftrightarrow\\; x + 1 = 0 \\;\\text{ou}\\; x - 5 = 0
[3] Résolution par facteur
    │ \\begin{aligned}   x + 1 = 0 &\\;\\Longleftrightarrow\\; x = -1 \\\\
  x - 5 = 0 &\\;\\Longleftrightarrow\\; x = 5 \\end{aligned}
[4] Ensemble des solutions
    │ S = \\left\\{ -1 \\,;\\, 5 \\right\\}
"
`;

exports[`snapshot — factorise > (x − 2)(x + 3) = 0 1`] = `
"
###### (x − 2)(x + 3) = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] recognize-factored: L’équation est déjà sous forme factorisée
[3] zero-product: Par la propriété du produit nul, chaque facteur est nul
[4] solve-each-factor: On résout chaque facteur séparément
[5] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] L’équation est déjà sous forme factorisée
[3] Par la propriété du produit nul
[4] On résout chaque facteur séparément
[5] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ \\left( x - 2\\right) \\left( x + 3\\right) = 0
[2] L’équation est déjà sous forme factorisée
    │ \\left( x - 2\\right) \\left( x + 3\\right) = 0
[3] Par la propriété du produit nul
    │ \\left(x - 2\\right) \\cdot \\left(x + 3\\right) = 0 \\;\\Longleftrightarrow\\; x - 2 = 0 \\;\\text{ou}\\; x + 3 = 0
[4] On résout chaque facteur séparément
    │ \\begin{aligned}   x - 2 = 0 &\\;\\Longleftrightarrow\\; x = 2 \\\\
  x + 3 = 0 &\\;\\Longleftrightarrow\\; x = -3 \\end{aligned}
[5] Solutions
    │ S = \\left\\{ 2 \\,;\\, -3 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Forme factorisée
[2] Produit nul
[3] Résolution par facteur
[4] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Forme factorisée
    │ \\left( x - 2\\right) \\left( x + 3\\right) = 0
[2] Produit nul
    │ \\left(x - 2\\right) \\cdot \\left(x + 3\\right) = 0 \\;\\Longleftrightarrow\\; x - 2 = 0 \\;\\text{ou}\\; x + 3 = 0
[3] Résolution par facteur
    │ \\begin{aligned}   x - 2 = 0 &\\;\\Longleftrightarrow\\; x = 2 \\\\
  x + 3 = 0 &\\;\\Longleftrightarrow\\; x = -3 \\end{aligned}
[4] Ensemble des solutions
    │ S = \\left\\{ 2 \\,;\\, -3 \\right\\}
"
`;

exports[`snapshot — non-standard-form > 3x² = 2x + 1 1`] = `
"
###### 3x² = 2x + 1 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] standardize: On déplace tous les termes dans le membre de gauche
[3] identify-coefficients: On identifie les coefficients a, b et c
[4] compute-discriminant: On calcule le discriminant Δ = b² − 4ac
[5] discriminant-positive: Δ > 0 : deux solutions distinctes
[6] apply-quadratic-formula: On applique la formule : x = (−b ± √Δ) / (2a)
[7] simplify-solutions: On simplifie les solutions
[8] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On met l’équation sous la forme \`ax² + bx + c = 0\`
[3] On identifie les coefficients a, b et c
[4] On calcule le discriminant Δ = b² − 4ac
[5] Δ > 0 : deux solutions distinctes
[6] On applique la formule : x = (−b ± √Δ) / (2a)
[7] On simplifie les solutions
[8] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ 3x^2 = 2x + 1
[2] On met l’équation sous la forme \`ax² + bx + c = 0\`
    │ \\begin{aligned}   3x^2 &= 2x + 1 \\\\   3x^2 - 2x - 1 &= 0 \\end{aligned}
[3] On identifie les coefficients a, b et c
    │ a = 3, \\quad b = -2, \\quad c = -1
[4] On calcule le discriminant Δ = b² − 4ac
    │ \\Delta = b^2 - 4ac = \\left(-2\\right)^2 - 4 \\cdot \\left(3\\right) \\cdot \\left(-1\\right) = 16
[5] Δ > 0 : deux solutions distinctes
    │ 3x^2 - 2x - 1 = 0
[6] On applique la formule : x = (−b ± √Δ) / (2a)
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(-2\\right) \\pm \\sqrt{16}}{2 \\cdot \\left(3\\right)} \\end{aligned}
[7] On simplifie les solutions
    │ \\begin{aligned}   x_1 &= \\dfrac{2 - \\sqrt{16}}{2 3} = -\\dfrac{1}{3} \\\\
  x_2 &= \\dfrac{2 + \\sqrt{16}}{2 3} = 1 \\end{aligned}
[8] Solutions
    │ S = \\left\\{ -\\dfrac{1}{3} \\,;\\, 1 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Forme standard
[2] Coefficients a, b, c
[3] Discriminant : Δ > 0
[4] Formule du second degré
[5] Simplification
[6] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Forme standard
    │ \\begin{aligned}   3x^2 &= 2x + 1 \\\\   3x^2 - 2x - 1 &= 0 \\end{aligned}
[2] Coefficients a, b, c
    │ a = 3, \\quad b = -2, \\quad c = -1
[3] Discriminant : Δ > 0
    │ \\Delta = b^2 - 4ac = \\left(-2\\right)^2 - 4 \\cdot \\left(3\\right) \\cdot \\left(-1\\right) = 16
[4] Formule du second degré
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(-2\\right) \\pm \\sqrt{16}}{2 \\cdot \\left(3\\right)} \\end{aligned}
[5] Simplification
    │ \\begin{aligned}   x_1 &= \\dfrac{2 - \\sqrt{16}}{2 3} = -\\dfrac{1}{3} \\\\
  x_2 &= \\dfrac{2 + \\sqrt{16}}{2 3} = 1 \\end{aligned}
[6] Ensemble des solutions
    │ S = \\left\\{ -\\dfrac{1}{3} \\,;\\, 1 \\right\\}
"
`;

exports[`snapshot — non-standard-form > x² + 2 = x + 8 1`] = `
"
###### x² + 2 = x + 8 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] standardize: On déplace tous les termes dans le membre de gauche
[3] identify-coefficients: On identifie les coefficients a, b et c
[4] compute-discriminant: On calcule le discriminant Δ = b² − 4ac
[5] discriminant-positive: Δ > 0 : deux solutions distinctes
[6] apply-quadratic-formula: On applique la formule : x = (−b ± √Δ) / (2a)
[7] simplify-solutions: On simplifie les solutions
[8] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On met l’équation sous la forme \`ax² + bx + c = 0\`
[3] On identifie les coefficients a, b et c
[4] On calcule le discriminant Δ = b² − 4ac
[5] Δ > 0 : deux solutions distinctes
[6] On applique la formule : x = (−b ± √Δ) / (2a)
[7] On simplifie les solutions
[8] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ x^2 + 2 = x + 8
[2] On met l’équation sous la forme \`ax² + bx + c = 0\`
    │ \\begin{aligned}   x^2 + 2 &= x + 8 \\\\   x^2 - x - 6 &= 0 \\end{aligned}
[3] On identifie les coefficients a, b et c
    │ a = 1, \\quad b = -1, \\quad c = -6
[4] On calcule le discriminant Δ = b² − 4ac
    │ \\Delta = b^2 - 4ac = \\left(-1\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(-6\\right) = 25
[5] Δ > 0 : deux solutions distinctes
    │ x^2 - x - 6 = 0
[6] On applique la formule : x = (−b ± √Δ) / (2a)
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(-1\\right) \\pm \\sqrt{25}}{2 \\cdot \\left(1\\right)} \\end{aligned}
[7] On simplifie les solutions
    │ \\begin{aligned}   x_1 &= \\dfrac{1 - \\sqrt{25}}{2 1} = -2 \\\\
  x_2 &= \\dfrac{1 + \\sqrt{25}}{2 1} = 3 \\end{aligned}
[8] Solutions
    │ S = \\left\\{ -2 \\,;\\, 3 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Forme standard
[2] Coefficients a, b, c
[3] Discriminant : Δ > 0
[4] Formule du second degré
[5] Simplification
[6] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Forme standard
    │ \\begin{aligned}   x^2 + 2 &= x + 8 \\\\   x^2 - x - 6 &= 0 \\end{aligned}
[2] Coefficients a, b, c
    │ a = 1, \\quad b = -1, \\quad c = -6
[3] Discriminant : Δ > 0
    │ \\Delta = b^2 - 4ac = \\left(-1\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(-6\\right) = 25
[4] Formule du second degré
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(-1\\right) \\pm \\sqrt{25}}{2 \\cdot \\left(1\\right)} \\end{aligned}
[5] Simplification
    │ \\begin{aligned}   x_1 &= \\dfrac{1 - \\sqrt{25}}{2 1} = -2 \\\\
  x_2 &= \\dfrac{1 + \\sqrt{25}}{2 1} = 3 \\end{aligned}
[6] Ensemble des solutions
    │ S = \\left\\{ -2 \\,;\\, 3 \\right\\}
"
`;

exports[`snapshot — non-standard-form > x² + 5x = −6 1`] = `
"
###### x² + 5x = −6 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] standardize: On déplace tous les termes dans le membre de gauche
[3] identify-coefficients: On identifie les coefficients a, b et c
[4] compute-discriminant: On calcule le discriminant Δ = b² − 4ac
[5] discriminant-positive: Δ > 0 : deux solutions distinctes
[6] apply-quadratic-formula: On applique la formule : x = (−b ± √Δ) / (2a)
[7] simplify-solutions: On simplifie les solutions
[8] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On met l’équation sous la forme \`ax² + bx + c = 0\`
[3] On identifie les coefficients a, b et c
[4] On calcule le discriminant Δ = b² − 4ac
[5] Δ > 0 : deux solutions distinctes
[6] On applique la formule : x = (−b ± √Δ) / (2a)
[7] On simplifie les solutions
[8] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ x^2 + 5x = -6
[2] On met l’équation sous la forme \`ax² + bx + c = 0\`
    │ \\begin{aligned}   x^2 + 5x &= -6 \\\\   x^2 + 5x + 6 &= 0 \\end{aligned}
[3] On identifie les coefficients a, b et c
    │ a = 1, \\quad b = 5, \\quad c = 6
[4] On calcule le discriminant Δ = b² − 4ac
    │ \\Delta = b^2 - 4ac = \\left(5\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(6\\right) = 1
[5] Δ > 0 : deux solutions distinctes
    │ x^2 + 5x + 6 = 0
[6] On applique la formule : x = (−b ± √Δ) / (2a)
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(5\\right) \\pm \\sqrt{1}}{2 \\cdot \\left(1\\right)} \\end{aligned}
[7] On simplifie les solutions
    │ \\begin{aligned}   x_1 &= \\dfrac{-5 - \\sqrt{1}}{2 1} = -3 \\\\
  x_2 &= \\dfrac{-5 + \\sqrt{1}}{2 1} = -2 \\end{aligned}
[8] Solutions
    │ S = \\left\\{ -3 \\,;\\, -2 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Forme standard
[2] Coefficients a, b, c
[3] Discriminant : Δ > 0
[4] Formule du second degré
[5] Simplification
[6] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Forme standard
    │ \\begin{aligned}   x^2 + 5x &= -6 \\\\   x^2 + 5x + 6 &= 0 \\end{aligned}
[2] Coefficients a, b, c
    │ a = 1, \\quad b = 5, \\quad c = 6
[3] Discriminant : Δ > 0
    │ \\Delta = b^2 - 4ac = \\left(5\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(6\\right) = 1
[4] Formule du second degré
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(5\\right) \\pm \\sqrt{1}}{2 \\cdot \\left(1\\right)} \\end{aligned}
[5] Simplification
    │ \\begin{aligned}   x_1 &= \\dfrac{-5 - \\sqrt{1}}{2 1} = -3 \\\\
  x_2 &= \\dfrac{-5 + \\sqrt{1}}{2 1} = -2 \\end{aligned}
[6] Ensemble des solutions
    │ S = \\left\\{ -3 \\,;\\, -2 \\right\\}
"
`;

exports[`snapshot — standard-double > 2x² − 4x + 2 = 0 1`] = `
"
###### 2x² − 4x + 2 = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] factor-gcd: On simplifie en divisant les deux membres par 2 (PGCD)
[3] identify-coefficients: On identifie les coefficients a, b et c
[4] compute-discriminant: On calcule le discriminant Δ = b² − 4ac
[5] discriminant-zero: Δ = 0 : une solution double
[6] apply-quadratic-formula: On applique la formule : x = −b / (2a)
[7] simplify-solutions: On simplifie les solutions
[8] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On divise les deux membres par 2 (PGCD)
[3] On identifie les coefficients a, b et c
[4] On calcule le discriminant Δ = b² − 4ac
[5] Δ = 0 : une solution double
[6] On applique la formule : x = −b / (2a)
[7] On simplifie les solutions
[8] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ 2x^2 - 4x + 2 = 0
[2] On divise les deux membres par 2 (PGCD)
    │ \\begin{aligned}   2x^2 - 4x + 2 &= 0 \\\\   x^2 - 2x + 1 &= 0 \\end{aligned}
[3] On identifie les coefficients a, b et c
    │ a = 1, \\quad b = -2, \\quad c = 1
[4] On calcule le discriminant Δ = b² − 4ac
    │ \\Delta = b^2 - 4ac = \\left(-2\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(1\\right) = 0
[5] Δ = 0 : une solution double
    │ x^2 - 2x + 1 = 0
[6] On applique la formule : x = −b / (2a)
    │ \\begin{aligned}   x &= \\dfrac{-b}{2a} \\\\   &= \\dfrac{-\\left(-2\\right)}{2 \\cdot \\left(1\\right)} \\end{aligned}
[7] On simplifie les solutions
    │ x_0 = \\dfrac{2}{2 1} = 1
[8] Solutions
    │ S = \\left\\{ 1 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Simplification (÷ 2)
[2] Coefficients a, b, c
[3] Discriminant : Δ = 0
[4] Formule du second degré
[5] Simplification
[6] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Simplification (÷ 2)
    │ \\begin{aligned}   2x^2 - 4x + 2 &= 0 \\\\   x^2 - 2x + 1 &= 0 \\end{aligned}
[2] Coefficients a, b, c
    │ a = 1, \\quad b = -2, \\quad c = 1
[3] Discriminant : Δ = 0
    │ \\Delta = b^2 - 4ac = \\left(-2\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(1\\right) = 0
[4] Formule du second degré
    │ \\begin{aligned}   x &= \\dfrac{-b}{2a} \\\\   &= \\dfrac{-\\left(-2\\right)}{2 \\cdot \\left(1\\right)} \\end{aligned}
[5] Simplification
    │ x_0 = \\dfrac{2}{2 1} = 1
[6] Ensemble des solutions
    │ S = \\left\\{ 1 \\right\\}
"
`;

exports[`snapshot — standard-double > x² + 6x + 9 = 0 1`] = `
"
###### x² + 6x + 9 = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] identify-coefficients: On identifie les coefficients a, b et c
[3] compute-discriminant: On calcule le discriminant Δ = b² − 4ac
[4] discriminant-zero: Δ = 0 : une solution double
[5] apply-quadratic-formula: On applique la formule : x = −b / (2a)
[6] simplify-solutions: On simplifie les solutions
[7] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On identifie les coefficients a, b et c
[3] On calcule le discriminant Δ = b² − 4ac
[4] Δ = 0 : une solution double
[5] On applique la formule : x = −b / (2a)
[6] On simplifie les solutions
[7] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ x^2 + 6x + 9 = 0
[2] On identifie les coefficients a, b et c
    │ a = 1, \\quad b = 6, \\quad c = 9
[3] On calcule le discriminant Δ = b² − 4ac
    │ \\Delta = b^2 - 4ac = \\left(6\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(9\\right) = 0
[4] Δ = 0 : une solution double
    │ x^2 + 6x + 9 = 0
[5] On applique la formule : x = −b / (2a)
    │ \\begin{aligned}   x &= \\dfrac{-b}{2a} \\\\   &= \\dfrac{-\\left(6\\right)}{2 \\cdot \\left(1\\right)} \\end{aligned}
[6] On simplifie les solutions
    │ x_0 = \\dfrac{-6}{2 1} = -3
[7] Solutions
    │ S = \\left\\{ -3 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Coefficients a, b, c
[2] Discriminant : Δ = 0
[3] Formule du second degré
[4] Simplification
[5] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Coefficients a, b, c
    │ a = 1, \\quad b = 6, \\quad c = 9
[2] Discriminant : Δ = 0
    │ \\Delta = b^2 - 4ac = \\left(6\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(9\\right) = 0
[3] Formule du second degré
    │ \\begin{aligned}   x &= \\dfrac{-b}{2a} \\\\   &= \\dfrac{-\\left(6\\right)}{2 \\cdot \\left(1\\right)} \\end{aligned}
[4] Simplification
    │ x_0 = \\dfrac{-6}{2 1} = -3
[5] Ensemble des solutions
    │ S = \\left\\{ -3 \\right\\}
"
`;

exports[`snapshot — standard-double > x² − 2x + 1 = 0 1`] = `
"
###### x² − 2x + 1 = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] identify-coefficients: On identifie les coefficients a, b et c
[3] compute-discriminant: On calcule le discriminant Δ = b² − 4ac
[4] discriminant-zero: Δ = 0 : une solution double
[5] apply-quadratic-formula: On applique la formule : x = −b / (2a)
[6] simplify-solutions: On simplifie les solutions
[7] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On identifie les coefficients a, b et c
[3] On calcule le discriminant Δ = b² − 4ac
[4] Δ = 0 : une solution double
[5] On applique la formule : x = −b / (2a)
[6] On simplifie les solutions
[7] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ x^2 - 2x + 1 = 0
[2] On identifie les coefficients a, b et c
    │ a = 1, \\quad b = -2, \\quad c = 1
[3] On calcule le discriminant Δ = b² − 4ac
    │ \\Delta = b^2 - 4ac = \\left(-2\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(1\\right) = 0
[4] Δ = 0 : une solution double
    │ x^2 - 2x + 1 = 0
[5] On applique la formule : x = −b / (2a)
    │ \\begin{aligned}   x &= \\dfrac{-b}{2a} \\\\   &= \\dfrac{-\\left(-2\\right)}{2 \\cdot \\left(1\\right)} \\end{aligned}
[6] On simplifie les solutions
    │ x_0 = \\dfrac{2}{2 1} = 1
[7] Solutions
    │ S = \\left\\{ 1 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Coefficients a, b, c
[2] Discriminant : Δ = 0
[3] Formule du second degré
[4] Simplification
[5] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Coefficients a, b, c
    │ a = 1, \\quad b = -2, \\quad c = 1
[2] Discriminant : Δ = 0
    │ \\Delta = b^2 - 4ac = \\left(-2\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(1\\right) = 0
[3] Formule du second degré
    │ \\begin{aligned}   x &= \\dfrac{-b}{2a} \\\\   &= \\dfrac{-\\left(-2\\right)}{2 \\cdot \\left(1\\right)} \\end{aligned}
[4] Simplification
    │ x_0 = \\dfrac{2}{2 1} = 1
[5] Ensemble des solutions
    │ S = \\left\\{ 1 \\right\\}
"
`;

exports[`snapshot — standard-negatif > 2x² + 3x + 4 = 0 1`] = `
"
###### 2x² + 3x + 4 = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] identify-coefficients: On identifie les coefficients a, b et c
[3] compute-discriminant: On calcule le discriminant Δ = b² − 4ac
[4] discriminant-negative: Δ < 0 : pas de solution réelle
[5] no-real-solution: L’équation n’a pas de solution réelle

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On identifie les coefficients a, b et c
[3] On calcule le discriminant Δ = b² − 4ac
[4] Δ < 0 : pas de solution réelle
[5] Pas de solution réelle

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ 2x^2 + 3x + 4 = 0
[2] On identifie les coefficients a, b et c
    │ a = 2, \\quad b = 3, \\quad c = 4
[3] On calcule le discriminant Δ = b² − 4ac
    │ \\Delta = b^2 - 4ac = \\left(3\\right)^2 - 4 \\cdot \\left(2\\right) \\cdot \\left(4\\right) = -23
[4] Δ < 0 : pas de solution réelle
    │ 2x^2 + 3x + 4 = 0
[5] Pas de solution réelle
    │ S = \\emptyset

========== SUPERIEUR (summarized) ==========
[1] Coefficients a, b, c
[2] Discriminant : Δ < 0
[3] S = ∅

========== SUPERIEUR (detailed) ==========
[1] Coefficients a, b, c
    │ a = 2, \\quad b = 3, \\quad c = 4
[2] Discriminant : Δ < 0
    │ \\Delta = b^2 - 4ac = \\left(3\\right)^2 - 4 \\cdot \\left(2\\right) \\cdot \\left(4\\right) = -23
[3] S = ∅
    │ S = \\emptyset
"
`;

exports[`snapshot — standard-negatif > x² + 2x + 5 = 0 1`] = `
"
###### x² + 2x + 5 = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] identify-coefficients: On identifie les coefficients a, b et c
[3] compute-discriminant: On calcule le discriminant Δ = b² − 4ac
[4] discriminant-negative: Δ < 0 : pas de solution réelle
[5] no-real-solution: L’équation n’a pas de solution réelle

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On identifie les coefficients a, b et c
[3] On calcule le discriminant Δ = b² − 4ac
[4] Δ < 0 : pas de solution réelle
[5] Pas de solution réelle

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ x^2 + 2x + 5 = 0
[2] On identifie les coefficients a, b et c
    │ a = 1, \\quad b = 2, \\quad c = 5
[3] On calcule le discriminant Δ = b² − 4ac
    │ \\Delta = b^2 - 4ac = \\left(2\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(5\\right) = -16
[4] Δ < 0 : pas de solution réelle
    │ x^2 + 2x + 5 = 0
[5] Pas de solution réelle
    │ S = \\emptyset

========== SUPERIEUR (summarized) ==========
[1] Coefficients a, b, c
[2] Discriminant : Δ < 0
[3] S = ∅

========== SUPERIEUR (detailed) ==========
[1] Coefficients a, b, c
    │ a = 1, \\quad b = 2, \\quad c = 5
[2] Discriminant : Δ < 0
    │ \\Delta = b^2 - 4ac = \\left(2\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(5\\right) = -16
[3] S = ∅
    │ S = \\emptyset
"
`;

exports[`snapshot — standard-negatif > x² + x + 1 = 0 1`] = `
"
###### x² + x + 1 = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] identify-coefficients: On identifie les coefficients a, b et c
[3] compute-discriminant: On calcule le discriminant Δ = b² − 4ac
[4] discriminant-negative: Δ < 0 : pas de solution réelle
[5] no-real-solution: L’équation n’a pas de solution réelle

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On identifie les coefficients a, b et c
[3] On calcule le discriminant Δ = b² − 4ac
[4] Δ < 0 : pas de solution réelle
[5] Pas de solution réelle

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ x^2 + x + 1 = 0
[2] On identifie les coefficients a, b et c
    │ a = 1, \\quad b = 1, \\quad c = 1
[3] On calcule le discriminant Δ = b² − 4ac
    │ \\Delta = b^2 - 4ac = \\left(1\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(1\\right) = -3
[4] Δ < 0 : pas de solution réelle
    │ x^2 + x + 1 = 0
[5] Pas de solution réelle
    │ S = \\emptyset

========== SUPERIEUR (summarized) ==========
[1] Coefficients a, b, c
[2] Discriminant : Δ < 0
[3] S = ∅

========== SUPERIEUR (detailed) ==========
[1] Coefficients a, b, c
    │ a = 1, \\quad b = 1, \\quad c = 1
[2] Discriminant : Δ < 0
    │ \\Delta = b^2 - 4ac = \\left(1\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(1\\right) = -3
[3] S = ∅
    │ S = \\emptyset
"
`;

exports[`snapshot — standard-positif > 3x² − 3x − 18 = 0 1`] = `
"
###### 3x² − 3x − 18 = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] factor-gcd: On simplifie en divisant les deux membres par 3 (PGCD)
[3] identify-coefficients: On identifie les coefficients a, b et c
[4] compute-discriminant: On calcule le discriminant Δ = b² − 4ac
[5] discriminant-positive: Δ > 0 : deux solutions distinctes
[6] apply-quadratic-formula: On applique la formule : x = (−b ± √Δ) / (2a)
[7] simplify-solutions: On simplifie les solutions
[8] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On divise les deux membres par 3 (PGCD)
[3] On identifie les coefficients a, b et c
[4] On calcule le discriminant Δ = b² − 4ac
[5] Δ > 0 : deux solutions distinctes
[6] On applique la formule : x = (−b ± √Δ) / (2a)
[7] On simplifie les solutions
[8] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ 3x^2 - 3x - 18 = 0
[2] On divise les deux membres par 3 (PGCD)
    │ \\begin{aligned}   3x^2 - 3x - 18 &= 0 \\\\   x^2 - x - 6 &= 0 \\end{aligned}
[3] On identifie les coefficients a, b et c
    │ a = 1, \\quad b = -1, \\quad c = -6
[4] On calcule le discriminant Δ = b² − 4ac
    │ \\Delta = b^2 - 4ac = \\left(-1\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(-6\\right) = 25
[5] Δ > 0 : deux solutions distinctes
    │ x^2 - x - 6 = 0
[6] On applique la formule : x = (−b ± √Δ) / (2a)
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(-1\\right) \\pm \\sqrt{25}}{2 \\cdot \\left(1\\right)} \\end{aligned}
[7] On simplifie les solutions
    │ \\begin{aligned}   x_1 &= \\dfrac{1 - \\sqrt{25}}{2 1} = -2 \\\\
  x_2 &= \\dfrac{1 + \\sqrt{25}}{2 1} = 3 \\end{aligned}
[8] Solutions
    │ S = \\left\\{ -2 \\,;\\, 3 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Simplification (÷ 3)
[2] Coefficients a, b, c
[3] Discriminant : Δ > 0
[4] Formule du second degré
[5] Simplification
[6] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Simplification (÷ 3)
    │ \\begin{aligned}   3x^2 - 3x - 18 &= 0 \\\\   x^2 - x - 6 &= 0 \\end{aligned}
[2] Coefficients a, b, c
    │ a = 1, \\quad b = -1, \\quad c = -6
[3] Discriminant : Δ > 0
    │ \\Delta = b^2 - 4ac = \\left(-1\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(-6\\right) = 25
[4] Formule du second degré
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(-1\\right) \\pm \\sqrt{25}}{2 \\cdot \\left(1\\right)} \\end{aligned}
[5] Simplification
    │ \\begin{aligned}   x_1 &= \\dfrac{1 - \\sqrt{25}}{2 1} = -2 \\\\
  x_2 &= \\dfrac{1 + \\sqrt{25}}{2 1} = 3 \\end{aligned}
[6] Ensemble des solutions
    │ S = \\left\\{ -2 \\,;\\, 3 \\right\\}
"
`;

exports[`snapshot — standard-positif > x² + 5x + 6 = 0 1`] = `
"
###### x² + 5x + 6 = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] identify-coefficients: On identifie les coefficients a, b et c
[3] compute-discriminant: On calcule le discriminant Δ = b² − 4ac
[4] discriminant-positive: Δ > 0 : deux solutions distinctes
[5] apply-quadratic-formula: On applique la formule : x = (−b ± √Δ) / (2a)
[6] simplify-solutions: On simplifie les solutions
[7] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On identifie les coefficients a, b et c
[3] On calcule le discriminant Δ = b² − 4ac
[4] Δ > 0 : deux solutions distinctes
[5] On applique la formule : x = (−b ± √Δ) / (2a)
[6] On simplifie les solutions
[7] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ x^2 + 5x + 6 = 0
[2] On identifie les coefficients a, b et c
    │ a = 1, \\quad b = 5, \\quad c = 6
[3] On calcule le discriminant Δ = b² − 4ac
    │ \\Delta = b^2 - 4ac = \\left(5\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(6\\right) = 1
[4] Δ > 0 : deux solutions distinctes
    │ x^2 + 5x + 6 = 0
[5] On applique la formule : x = (−b ± √Δ) / (2a)
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(5\\right) \\pm \\sqrt{1}}{2 \\cdot \\left(1\\right)} \\end{aligned}
[6] On simplifie les solutions
    │ \\begin{aligned}   x_1 &= \\dfrac{-5 - \\sqrt{1}}{2 1} = -3 \\\\
  x_2 &= \\dfrac{-5 + \\sqrt{1}}{2 1} = -2 \\end{aligned}
[7] Solutions
    │ S = \\left\\{ -3 \\,;\\, -2 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Coefficients a, b, c
[2] Discriminant : Δ > 0
[3] Formule du second degré
[4] Simplification
[5] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Coefficients a, b, c
    │ a = 1, \\quad b = 5, \\quad c = 6
[2] Discriminant : Δ > 0
    │ \\Delta = b^2 - 4ac = \\left(5\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(6\\right) = 1
[3] Formule du second degré
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(5\\right) \\pm \\sqrt{1}}{2 \\cdot \\left(1\\right)} \\end{aligned}
[4] Simplification
    │ \\begin{aligned}   x_1 &= \\dfrac{-5 - \\sqrt{1}}{2 1} = -3 \\\\
  x_2 &= \\dfrac{-5 + \\sqrt{1}}{2 1} = -2 \\end{aligned}
[5] Ensemble des solutions
    │ S = \\left\\{ -3 \\,;\\, -2 \\right\\}
"
`;

exports[`snapshot — standard-positif > x² + 7x + 12 = 0 1`] = `
"
###### x² + 7x + 12 = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] identify-coefficients: On identifie les coefficients a, b et c
[3] compute-discriminant: On calcule le discriminant Δ = b² − 4ac
[4] discriminant-positive: Δ > 0 : deux solutions distinctes
[5] apply-quadratic-formula: On applique la formule : x = (−b ± √Δ) / (2a)
[6] simplify-solutions: On simplifie les solutions
[7] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On identifie les coefficients a, b et c
[3] On calcule le discriminant Δ = b² − 4ac
[4] Δ > 0 : deux solutions distinctes
[5] On applique la formule : x = (−b ± √Δ) / (2a)
[6] On simplifie les solutions
[7] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ x^2 + 7x + 12 = 0
[2] On identifie les coefficients a, b et c
    │ a = 1, \\quad b = 7, \\quad c = 12
[3] On calcule le discriminant Δ = b² − 4ac
    │ \\Delta = b^2 - 4ac = \\left(7\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(12\\right) = 1
[4] Δ > 0 : deux solutions distinctes
    │ x^2 + 7x + 12 = 0
[5] On applique la formule : x = (−b ± √Δ) / (2a)
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(7\\right) \\pm \\sqrt{1}}{2 \\cdot \\left(1\\right)} \\end{aligned}
[6] On simplifie les solutions
    │ \\begin{aligned}   x_1 &= \\dfrac{-7 - \\sqrt{1}}{2 1} = -4 \\\\
  x_2 &= \\dfrac{-7 + \\sqrt{1}}{2 1} = -3 \\end{aligned}
[7] Solutions
    │ S = \\left\\{ -4 \\,;\\, -3 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Coefficients a, b, c
[2] Discriminant : Δ > 0
[3] Formule du second degré
[4] Simplification
[5] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Coefficients a, b, c
    │ a = 1, \\quad b = 7, \\quad c = 12
[2] Discriminant : Δ > 0
    │ \\Delta = b^2 - 4ac = \\left(7\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(12\\right) = 1
[3] Formule du second degré
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(7\\right) \\pm \\sqrt{1}}{2 \\cdot \\left(1\\right)} \\end{aligned}
[4] Simplification
    │ \\begin{aligned}   x_1 &= \\dfrac{-7 - \\sqrt{1}}{2 1} = -4 \\\\
  x_2 &= \\dfrac{-7 + \\sqrt{1}}{2 1} = -3 \\end{aligned}
[5] Ensemble des solutions
    │ S = \\left\\{ -4 \\,;\\, -3 \\right\\}
"
`;

exports[`snapshot — standard-positif > x² − 5x + 6 = 0 1`] = `
"
###### x² − 5x + 6 = 0 ######

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du second degré
[2] identify-coefficients: On identifie les coefficients a, b et c
[3] compute-discriminant: On calcule le discriminant Δ = b² − 4ac
[4] discriminant-positive: Δ > 0 : deux solutions distinctes
[5] apply-quadratic-formula: On applique la formule : x = (−b ± √Δ) / (2a)
[6] simplify-solutions: On simplifie les solutions
[7] read-solutions: On conclut sur l’ensemble des solutions

========== LYCEE (summarized) ==========
[1] Équation du second degré
[2] On identifie les coefficients a, b et c
[3] On calcule le discriminant Δ = b² − 4ac
[4] Δ > 0 : deux solutions distinctes
[5] On applique la formule : x = (−b ± √Δ) / (2a)
[6] On simplifie les solutions
[7] Solutions

========== LYCEE (detailed) ==========
[1] Équation du second degré
    │ x^2 - 5x + 6 = 0
[2] On identifie les coefficients a, b et c
    │ a = 1, \\quad b = -5, \\quad c = 6
[3] On calcule le discriminant Δ = b² − 4ac
    │ \\Delta = b^2 - 4ac = \\left(-5\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(6\\right) = 1
[4] Δ > 0 : deux solutions distinctes
    │ x^2 - 5x + 6 = 0
[5] On applique la formule : x = (−b ± √Δ) / (2a)
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(-5\\right) \\pm \\sqrt{1}}{2 \\cdot \\left(1\\right)} \\end{aligned}
[6] On simplifie les solutions
    │ \\begin{aligned}   x_1 &= \\dfrac{5 - \\sqrt{1}}{2 1} = 2 \\\\
  x_2 &= \\dfrac{5 + \\sqrt{1}}{2 1} = 3 \\end{aligned}
[7] Solutions
    │ S = \\left\\{ 2 \\,;\\, 3 \\right\\}

========== SUPERIEUR (summarized) ==========
[1] Coefficients a, b, c
[2] Discriminant : Δ > 0
[3] Formule du second degré
[4] Simplification
[5] Ensemble des solutions

========== SUPERIEUR (detailed) ==========
[1] Coefficients a, b, c
    │ a = 1, \\quad b = -5, \\quad c = 6
[2] Discriminant : Δ > 0
    │ \\Delta = b^2 - 4ac = \\left(-5\\right)^2 - 4 \\cdot \\left(1\\right) \\cdot \\left(6\\right) = 1
[3] Formule du second degré
    │ \\begin{aligned}   x &= \\dfrac{-b \\pm \\sqrt{\\Delta}}{2a} \\\\   &= \\dfrac{-\\left(-5\\right) \\pm \\sqrt{1}}{2 \\cdot \\left(1\\right)} \\end{aligned}
[4] Simplification
    │ \\begin{aligned}   x_1 &= \\dfrac{5 - \\sqrt{1}}{2 1} = 2 \\\\
  x_2 &= \\dfrac{5 + \\sqrt{1}}{2 1} = 3 \\end{aligned}
[5] Ensemble des solutions
    │ S = \\left\\{ 2 \\,;\\, 3 \\right\\}
"
`;
